# AIoT

./: .env  README.md  requirements.txt
cuda_kernels/: CMakeLists.txt  benchmark.py  fix_code.py  test_run.py  tools.py
cuda_kernels/src/: bindings.cpp  postprocess.cu  postprocess.h  preprocess.cu  preprocess.h
cuda_kernels/tests/: test_postprocess.cpp  test_preprocess.cpp
data/: violations.csv  violations.db
detector/:  car_main.py  car_main.py  config.py  cuda_demo.py  cuda_runtime.py  event_utils.py  gpio_compat.py  hardware.py  helmet_cam.py  manual_control.py  motor_controller.py  ppe_detector.py  yolo_utils.py
server/: app.py  line_notify.py
server/static/css/: style.css
server/templates/: base.html  dashboard.html  event_new.html  events.html  login.html  stats.html
